fix: remove clip overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -115,7 +115,6 @@ section {
   position: relative;
   
   margin: 12px;
-  overflow: clip;
 }
 
 .frame > img {
